cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 17)

set(COMPONENT_SRCS		
#		"src/pj/compat/sigjmp.c"
		"src/pj/compat/string_compat.c"
		
		"src/pj/activesock.c"
		"src/pj/addr_resolv_sock.c"
		"src/pj/array.c"
		"src/pj/config.c"
		"src/pj/errno.c"
		"src/pj/except.c"
		"src/pj/fifobuf.c"
		"src/pj/file_access_unistd.c"
		"src/pj/file_io_ansi.c"
		"src/pj/guid_simple.c"
		"src/pj/hash.c"
		"src/pj/ioqueue_select.c"
		"src/pj/ip_helper_generic.c"
		"src/pj/list.c"
		"src/pj/lock.c"
		"src/pj/log_writer_stdout.c"
		"src/pj/log.c"
		"src/pj/os_core_esp32.c"
		"src/pj/os_error_unix.c"
		"src/pj/os_info.c"
		"src/pj/os_time_common.c"
		"src/pj/os_time_unix.c"
		"src/pj/os_timestamp_common.c"
		"src/pj/os_timestamp_posix.c"
		"src/pj/pool_buf.c"
		"src/pj/pool_caching.c"
		"src/pj/pool_dbg.c"
		"src/pj/pool_policy_malloc.c"
		"src/pj/pool.c"
		"src/pj/rand.c"
		"src/pj/rbtree.c"
		"src/pj/sock_bsd.c"
		"src/pj/sock_common.c"
		"src/pj/sock_qos_bsd.c"
		"src/pj/sock_qos_common.c"
		"src/pj/sock_select.c"
		
		"src/pj/ssl_sock_common.c"
		"src/pj/ssl_sock_dump.c"
		"src/pj/ssl_sock_gtls.c"
		"src/pj/ssl_sock_imp_common.c"
		"src/pj/ssl_sock_ossl.c"
		
		"src/pj/string.c"
		"src/pj/symbols.c"
		"src/pj/timer.c"
		"src/pj/types.c"
		
		"src/pjlib-test/activesock.c"
		"src/pjlib-test/atomic.c"
		"src/pjlib-test/echo_clt.c"
		"src/pjlib-test/errno.c"
		"src/pjlib-test/exception.c"
		"src/pjlib-test/fifobuf.c"
		"src/pjlib-test/file.c"
		"src/pjlib-test/hash_test.c"
		"src/pjlib-test/ioq_perf.c"
		"src/pjlib-test/ioq_tcp.c"
		"src/pjlib-test/ioq_udp.c"
		"src/pjlib-test/ioq_unreg.c"
		"src/pjlib-test/list.c"
		"src/pjlib-test/mutex.c"
		"src/pjlib-test/os.c"
		"src/pjlib-test/pool_perf.c"
		"src/pjlib-test/pool.c"
		"src/pjlib-test/rand.c"
		"src/pjlib-test/rbtree.c"
		"src/pjlib-test/select.c"
		"src/pjlib-test/sleep.c"
		"src/pjlib-test/sock_perf.c"
		"src/pjlib-test/sock.c"
		"src/pjlib-test/string.c"
		"src/pjlib-test/test.c"
		"src/pjlib-test/thread.c"
		"src/pjlib-test/timer.c"
		"src/pjlib-test/timestamp.c"
		"src/pjlib-test/udp_echo_srv_ioqueue.c"
		"src/pjlib-test/udp_echo_srv_sync.c"
		"src/pjlib-test/util.c"
)
       
idf_component_register(SRCS ${COMPONENT_SRCS}
		
    INCLUDE_DIRS    			 
    			 "include"
    			 "include/pj"
    			 "include/pj/compat"
    			 "include/pj++"
    			 "src/pj"
    			 "src/pjlib-test"

	REQUIRES FreeRTOS-POSIX
)
